--- a/SportsApp/LeagueDetails/View/TeamsSection/TeamCell.xib
+++ b/SportsApp/LeagueDetails/View/TeamsSection/TeamCell.xib
@@ -21,18 +21,18 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Arsnal" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zjy-if-9ep">
-                    <rect key="frame" x="116.66666666666669" y="20" width="88" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Arsnal" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zjy-if-9ep">
+                    <rect key="frame" x="116.66666666666669" y="20" width="90" height="21"/>
                     <color key="tintColor" red="0.0" green="0.22352941179999999" blue="0.85490196080000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="88" id="FMI-Yx-xfF"/>
+                        <constraint firstAttribute="width" constant="90" id="FMI-Yx-xfF"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="11" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wN2-pb-0gP">
-                    <rect key="frame" x="224.66666666666666" y="20" width="21" height="21"/>
+                    <rect key="frame" x="231.66666666666666" y="20" width="21" height="21"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="21" id="fqM-N4-Hlj"/>
                     </constraints>
@@ -41,7 +41,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="88" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MoD-eE-80M">
-                    <rect key="frame" x="273.66666666666669" y="20" width="21" height="21"/>
+                    <rect key="frame" x="280.66666666666669" y="20" width="21" height="21"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="21" id="OBM-TX-Wa7"/>
                     </constraints>
@@ -50,7 +50,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" text="26" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9TX-aI-grg">
-                    <rect key="frame" x="322.66666666666669" y="20" width="21" height="21"/>
+                    <rect key="frame" x="329.66666666666669" y="20" width="21" height="21"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="21" id="8yw-7b-9Iv"/>
                     </constraints>
@@ -86,7 +86,7 @@
                 <constraint firstItem="j0o-bj-1zS" firstAttribute="top" secondItem="5rh-KZ-iyq" secondAttribute="top" constant="20" id="ahh-el-Ilh"/>
                 <constraint firstAttribute="bottom" secondItem="MoD-eE-80M" secondAttribute="bottom" constant="19" id="bUC-cD-2Cs"/>
                 <constraint firstAttribute="bottom" secondItem="9TX-aI-grg" secondAttribute="bottom" constant="19" id="f42-xu-ba7"/>
-                <constraint firstItem="wN2-pb-0gP" firstAttribute="leading" secondItem="zjy-if-9ep" secondAttribute="trailing" constant="20" id="fRa-YN-j4H"/>
+                <constraint firstItem="wN2-pb-0gP" firstAttribute="leading" secondItem="zjy-if-9ep" secondAttribute="trailing" constant="25" id="fRa-YN-j4H"/>
                 <constraint firstItem="NHb-wu-ObA" firstAttribute="top" secondItem="5rh-KZ-iyq" secondAttribute="top" constant="10" id="gbn-kd-1bo"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
